Updated the MoneyTest after the change in Money class.